Add dropdown in menu bar for extra source links

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,7 +28,15 @@
                             <a href="{{ "software" | relURL }}/{{ partial "index" }}">Software</a><br />
                         </div>
                     </span>
-                    <a href="https://codeberg.org/psylink">Source</a>
+                    <span class="parts">
+                        <a href="https://codeberg.org/psylink/psylink">Source</a>
+                        <div class="dropdown-content">
+                            <a href="https://github.com/psylink-me/psylink">GitHub</a><br />
+                            <a href="https://codeberg.org/psylink/psylink-web">Website</a><br />
+                            <a href="https://codeberg.org/psylink/psylink-datasets">Datasets</a><br />
+                            <a href="https://codeberg.org/psylink/psylink-3dprint">3D&#8209;Printing</a><br />
+                        </div>
+                    </span>
                     <a href="https://codeberg.org/psylink/psylink/wiki">Wiki</a>
                     <a href="{{ "faq" | relURL }}/{{ partial "index" }}">FAQ</a>
                     <a href="/index.xml"><img src="{{ "feed-icon.png" | relURL }}" class="rss" alt="RSS" /></a>
