add mastodon icon in title bar

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -40,6 +40,7 @@
                     <a href="https://codeberg.org/psylink/psylink/wiki">Wiki</a>
                     <a href="{{ "faq" | relURL }}/{{ partial "index" }}">FAQ</a>
                     <a href="/index.xml"><img src="{{ "feed-icon.png" | relURL }}" class="rss" alt="RSS" /></a>
+                    <a href="https://fosstodon.org/@psylink"><img src="{{ "mastodon-icon.svg" | relURL }}" class="rss" alt="Mastodon" /></a>
                 </nav>
             </div>
         </header>
